fix: added new tests and removed wrong delete functionality